--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="startt">СТАРТ</string>
     <string name="go1">ЕХАТЬ</string>
     <string name="go2">ЕХАТЬ</string>
+    <string name="_2">2 ИГРОКА</string>
 </resources>
